perf(master): optimize backend idle runtime